# shopping-api/src/main/java/be/jsilkens/devbooks/shopping/api/mapper/BookApiMapper.java
@@ -1,8 +1,10 @@
 package be.jsilkens.devbooks.shopping.api.mapper;
 
-import be.jsilkens.devbooks.shopping.api.model.BookDTO;
-import be.jsilkens.devbooks.shopping.api.model.Price;
+import be.jsilkens.devbooks.common.domain.PaginatedResult;
+import be.jsilkens.devbooks.common.domain.PaginationMetadata;
+import be.jsilkens.devbooks.shopping.api.model.*;
 import be.jsilkens.devbooks.shopping.domain.Book;
+import be.jsilkens.devbooks.shopping.domain.BookListItem;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
@@ -22,5 +24,37 @@ public class BookApiMapper {
         bookDTO.setPrice(price);
 
         return bookDTO;
+    }
+
+    public static BookListItemDTO map(BookListItem item) {
+        var price = new Price();
+        price.setValue(item.price().amount().doubleValue());
+        price.setCurrency(item.price().currency().name());
+
+        var bookListItemDTO = new BookListItemDTO();
+        bookListItemDTO.setTitle(item.title());
+        bookListItemDTO.setAuthor(item.author());
+        bookListItemDTO.setPrice(price);
+        bookListItemDTO.setDetailsLink("/api/book/" + item.isbn().value());
+
+        return bookListItemDTO;
+    }
+
+    public static PaginatedBookResponseDTO map(PaginatedResult<BookListItem> result) {
+        var responseDTO = new PaginatedBookResponseDTO();
+        responseDTO.setItems(result.items().stream()
+                .map(BookApiMapper::map)
+                .toList());
+        responseDTO.setMetadata(map(result.metadata()));
+        return responseDTO;
+    }
+
+    private static PaginationMetadataDTO map(PaginationMetadata metadata) {
+        var metadataDTO = new PaginationMetadataDTO();
+        metadataDTO.setCurrentPage(metadata.currentPage());
+        metadataDTO.setPageSize(metadata.pageSize());
+        metadataDTO.setTotalItems(metadata.totalItems());
+        metadataDTO.setTotalPages(metadata.totalPages());
+        return metadataDTO;
     }
 }
